--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
     content="É um creme tópico de alta resistência que usa uma mistura inovadora de ingredientes totalmente naturais e de qualidade premium para realçar a forma, o tamanho e a firmeza dos seios,">
   <meta name="keywords" content="cupom, desconto, beauty seios">
 
-  <link rel="alternate" href="https://beauty-seios.desconto.click" hreflang="pt-br" />
-  <link rel=“canonical” href=“https://beauty-seios.desconto.click” />
+  <link rel="alternate" href="https://beauty-seios.aprovamos.online" hreflang="pt-br" />
+  <link rel=“canonical” href=“https://beauty-seios.aprovamos.online” />
 
 
   <!-- // INICIO SNIPPET PRODUTO // -->
@@ -299,7 +299,7 @@
     "@type": "Product",
     "name": "Beauty Seios",
     "image": [
-      "https://images.desconto.click/beauty-seios.webp"
+      "https://images.aprovamos.online/beauty-seios.webp"
      ],
     "description": "É um creme tópico de alta resistência que usa uma mistura inovadora de ingredientes totalmente naturais e de qualidade premium para realçar a forma, o tamanho e a firmeza dos seios,",
     "sku": "",
@@ -327,7 +327,7 @@
     },
     "offers": {
       "@type": "Offer",
-      "url": "https://beauty-seios.desconto.click/",
+      "url": "https://beauty-seios.aprovamos.online/",
       "priceCurrency": "BRL",
       "price": "147.00",
       "priceValidUntil": "2026-12-25",
@@ -384,7 +384,7 @@
 
     <div class="containerzao">
       <div class="imagem"> <a href="usar-o-cupom.html" alt="OFERTA" title="COMPRE BARATO"><img
-            src="https://images.desconto.click/beauty-seios.webp" alt="Beauty Seios" width="275" height="280"></a></div>
+            src="https://images.aprovamos.online/beauty-seios.webp" alt="Beauty Seios" width="275" height="280"></a></div>
 
       <div class="descricao">
         <p>É um creme tópico de alta resistência que usa uma mistura inovadora de ingredientes totalmente naturais e de qualidade premium para realçar a forma, o tamanho e a firmeza dos seios, maximizando suas curvas femininas no processo. BEAUTY SEIOS foi desenvolvido em uma instalação credenciada pela GMP e certificada pela FDA nos EUA com os mais rígidos padrões de saúde e segurança.</p>
@@ -805,14 +805,14 @@
 
   <footer class="container-footer">
     <div class="text-rodape">
-      <div class="a"><a href="https://desconto.click/termos.html" class="text-rodape">Termos de Uso</a> | <a
-          href="https://desconto.click/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
-          href="https://desconto.click/" class="text-rodape">Mais Cupons</a>
+      <div class="a"><a href="https://aprovamos.online/termos.html" class="text-rodape">Termos de Uso</a> | <a
+          href="https://aprovamos.online/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
+          href="https://aprovamos.online/" class="text-rodape">Mais Cupons</a>
         </div>
     </div>
     <div class="container-footer">
       <div class="text-rodape">
-        <h4> Desconto.Click © Todos os direitos reservados.</h4>
+        <h4> aprovamos.online © Todos os direitos reservados.</h4>
       </div>
     </div>
   </footer>
